[gd_scene load_steps=5 format=3 uid="uid://cb1ysu6lfx171"]

[ext_resource type="Script" path="res://CasteletCore/GUINode/DialogueNode.gd" id="1_p3qt0"]
[ext_resource type="StyleBox" uid="uid://c2c1o4ao7016i" path="res://DefaultAssets/DefaultSpeakerWindow.tres" id="2_krm3u"]
[ext_resource type="LabelSettings" uid="uid://jbdwm54u7iyv" path="res://DefaultAssets/DefaultDialogueTypesetting.tres" id="3_kbtf1"]
[ext_resource type="StyleBox" uid="uid://bnnm0ag6717jh" path="res://DefaultAssets/DefaultDialogueWindow.tres" id="4_hbdqr"]

[node name="DialogueNode" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -14.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 1
script = ExtResource("1_p3qt0")

[node name="Speaker" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(120, 30)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -255.0
offset_right = -262.0
offset_bottom = -194.0
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_krm3u")

[node name="SpeakerLabel" type="Label" parent="Speaker"]
layout_mode = 2
text = "Speaker"
label_settings = ExtResource("3_kbtf1")
horizontal_alignment = 1

[node name="Dialogue" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(800, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = ExtResource("4_hbdqr")

[node name="DialogueLabel" type="Label" parent="Dialogue"]
layout_mode = 2
size_flags_vertical = 1
text = "Dialogue Line"
label_settings = ExtResource("3_kbtf1")
autowrap_mode = 3

[node name="CTC_Indicator" type="Control" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 370.0
offset_top = -30.0
offset_right = 370.0
offset_bottom = -30.0
grow_vertical = 2
mouse_filter = 1

[node name="CTC_Sprite" type="Polygon2D" parent="CTC_Indicator"]
color = Color(0.160784, 0.054902, 0.0509804, 1)
polygon = PackedVector2Array(0, 0, 0, 20, 20, 10)
